--- a/Birthday /index.html
+++ b/Birthday /index.html
@@ -28,28 +28,31 @@
     <div id="main">
       <div id="letter">
         <b>Sweetheart..</b>
-        <p>मेरे जीवन मे बहुत से दोस्त मिले,</p>
-        <p>लेकिन तुमारे जैसे कोई नहीं मिला ||</p>
-        <p> तुमरी वजह से मे बहुत बदल गया</p>
-        <p>मेने सोच न था,</p>
-        <p>की तुम मेरी लिया इतना खास बन जाओगी</p>
-        <p>लगता है मुझको तुम से प्यार हो गया बकलोल :) </p>
+        <p>Hello Chhavi kaisi ho ,</p>
+        <p> मैं बहुत दिनों से तुमसे कुछ कहना चाहता हु, </p>
+        <p> तुम पूछती हो न की तुम्हे इतनी जलन क्यों 
+            होती है जब मैं किसी और का जिक्र करती हु। </p>
+         <p> क्युकी मुझे तुमसे प्यार हो गया है मैं ये बात चाहता हु 
+             की तुम्हे कभी पता न चले </p>
+        <p> लेकिन अगर मैं बताऊंगा नही तो मैं रह नही पाऊंगा </p>
+        <p> मुझे पता है मैं तुम्हारे टाइप का नहीं हु ||</p>
+        <p> फिरभी तुमसे प्यार हो गया </p>
+        <p>तुम मुझे रिजेक्ट भी कर दोगी तो मुझे accept हैं,</p>
+        <p> और यार मुझे इतना मत तरसाया करो 
+        मैं तुमसे रोज बात करना चाहता हु</p>
+        <p>तुम्हारे लिए कुछ शायरी  :) </p>
         <br />
-        <p>तुम्हें देखकर मैं खुद को भूल जाता हूँ, <p>
-        <p>तन्हाई में अक्सर ग़ज़ल गुनगुनाता हूँ,</p>
-        <p>इश्क़ हो गया है या कोई और बला है,</p>
-        <p>बेवजह यूँ हर घड़ी अब मुस्कुराता हूँ।❜❜</p>
+        <p>कितना खूबसूरत चहरा है तुम्हारा, <p>
+        <p>हर दिल तो chhavi दीवाना है तुम्हारा,</p>
+        <p>लोग कहते हैं तुम टुकड़ा हो चांद का,</p>
+        <p>पर मैं कहता हु चांद भी टुकड़ा हैं तुम्हारा ।❜❜</p>
 
-        <p>2.❝सिर्फ इशारों में होती महोब्बत अगर,</p>
-        <p>  इन अलफाजों को खुबसूरती कौन देता,</p>
-        <p>  बस पत्थर बन के रह जाता ‘ताज महल,</p>
-        <p>  अगर इश्क इसे अपनी पहचान ना देता।❜❜</p><br>
-        <p>GC</p>
-        <p>GC</p>
-        <p>GS</p>
-        <p>GS</p>
-        <p>g</p>
-        <p>g</p>
+        <p>2.❝हम जो तुमसे मिले हैं इत्तेफ़ाक थोड़ी है,</p>
+        <p> मिलके तुम्हे छोड़ दे मजाक थोड़ी है,</p>
+        <p>  अगर होती तुमसे मोहोब्बत एक हद तक तो 
+            छोड़ देते,</p>
+        <p> पर हमारी मोहोब्बत का हिसाब थोड़ी है।❜❜</p><br> 
+          
         <span class="CV" >I LOVE YOU Chhavi </span>
       </div>
       <div id="clock-box">
